name: sugar-cache
version: 0.0.1.0
synopsis: Sugar Data Cache
homepage: https://github.com/jxv/sugar#readme
description: Please see the README on GitHub at <https://github.com/jxv/sugar#readme>
category: Text, Configuration
bug-reports: https://github.com/jxv/sugar/issues
author: Joe Vargas
maintainer: Joe Vargas
license: OtherLicense
license-file: LICENSE
build-type: Simple
cabal-version: 1.14
extra-source-files:
    CHANGELOG.md
    LICENSE
    README.md

source-repository head
  type: git
  location: https://github.com/jxv/sugar

library
  exposed-modules:
      Sugar.Cache
  hs-source-dirs:
      src
  default-extensions:
  ghc-options: -Wall
  build-depends:
      aeson > 2.0
    , base >=4.7 && <5
    , bytestring
    , cereal
    , containers >0.5 && <1
    , megaparsec
    , ordered-containers
    , safe
    , scientific
    , sugar == 0.0.1.1
    , text
    , time
    , text-conversions
    , unordered-containers
    , vector
    , stm
  default-language: Haskell2010

test-suite sugar-cache-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      tests
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base
    , hspec
    , sugar
    , sugar-cache
    , tasty
    , tasty-hspec
  default-language: Haskell2010
